TAG-72 Endre tag + navngi variable (code review)

--- a/src/index.less
+++ b/src/index.less
@@ -1,2 +1,2 @@
-@import "~nav-frontend-core/less/core.less";
+@import '~nav-frontend-core/less/core.less';
 @import '~nav-frontend-typografi-style/src/index.less';
