TAG-82: Lag kontaktinformasjon for NAV-veileder

--- a/src/AvtaleSide/KontaktInformasjonSteg/DeltakerinfoDel/DeltakerinfoDel.less
+++ b/src/AvtaleSide/KontaktInformasjonSteg/DeltakerinfoDel/DeltakerinfoDel.less
@@ -2,6 +2,10 @@
 
 @media (min-width: @screen-sm-min) {
   .deltakerinfo {
+    &__tittel {
+      margin-bottom: 2rem;
+    }
+
     &__deltakernavn {
       display: flex;
       flex-direction: row;
