TAG-85: Fiks styling for desktop stegmeny

--- a/src/StegSide/Stegmeny/StegmenyLenke/StegmenyLenke.less
+++ b/src/StegSide/Stegmeny/StegmenyLenke/StegmenyLenke.less
@@ -1,3 +1,25 @@
-.stegmenylenke {
+@import '~nav-frontend-core/less/_variabler';
 
+.stegmenylenke {
+  display: flex;
+  align-items: center;
+  height: 4rem;
+  width: 18rem;
+  margin: 0.5rem;
+  padding-left: 1rem;
+  border-radius: 4px;
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+
+  &__label {
+    padding-left: 1rem;
+  }
+
+  &.aktiv {
+    background-color: @navDypBla;
+    color: white;
+    border: 2px solid @navOransje;
+  }
 }
