--- a/src/StegSide/Stegside.less
+++ b/src/StegSide/Stegside.less
@@ -4,14 +4,24 @@
   background-color: #efefef;
   min-height: 100%;
   padding: 1rem 1rem 4rem;
+
+  &__ekspanderbart-panel {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
 }
 
 @media (min-width: @screen-sm-min) {
   .stegside {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 4rem;
 
     &__innhold-desktop {
       background-color: white;
       width: 40rem;
+      margin-left: 1rem;
     }
   }
 }
