--- a/src/StegSide/Stegside.less
+++ b/src/StegSide/Stegside.less
@@ -9,6 +9,10 @@
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
   }
+
+  &__lagre-knapp {
+    margin: 1rem;
+  }
 }
 
 @media (min-width: @screen-sm-min) {
@@ -22,6 +26,10 @@
       background-color: white;
       width: 40rem;
       margin-left: 1rem;
+    }
+
+    &__lagre-knapp {
+      margin: 2rem;
     }
   }
 }
