TAG-85: Bruk grå bakgrunnsfarge fra nav design system

--- a/src/Stegside/Stegside.less
+++ b/src/Stegside/Stegside.less
@@ -1,7 +1,7 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .stegside {
-  background-color: #efefef;
+  background-color: @grayBackground;
   min-height: 100%;
   padding: 1rem 1rem 4rem;
 
