TAG-89: Lag målsteg

--- a/src/index.less
+++ b/src/index.less
@@ -5,3 +5,5 @@
 @import './Stegside/KontaktInformasjonSteg/ArbeidsgiverinfoDel/ArbeidsgiverinfoDel.less';
 @import './Stegside/KontaktInformasjonSteg/VeilederinfoDel/VeilederinfoDel.less';
 @import './Stegside/MaalSteg/MaalSteg.less';
+@import './Stegside/MaalSteg/MaalKort/MaalKort.less';
+@import './Stegside/MaalSteg/NyttMaal/NyttMaal.less';
