--- a/src/Stegside/MaalSteg/MaalKort/MaalKort.less
+++ b/src/Stegside/MaalSteg/MaalKort/MaalKort.less
@@ -20,4 +20,14 @@
     width: 100%;
     height: 2px;
   }
+
+  &__knapper-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1.5rem;
+  }
+
+  &__endreknapp {
+    margin-right: 1rem;
+  }
 }
