TAG-89: Refaktorer maalsteg

--- a/src/index.less
+++ b/src/index.less
@@ -6,4 +6,4 @@
 @import './Stegside/KontaktInformasjonSteg/VeilederinfoDel/VeilederinfoDel.less';
 @import './Stegside/MaalSteg/MaalSteg.less';
 @import './Stegside/MaalSteg/MaalKort/MaalKort.less';
-@import './Stegside/MaalSteg/NyttMaal/NyttMaal.less';
+@import 'Stegside/MaalSteg/RedigerMaal/RedigerMaal.less';
