TAG-89: Endre styling på endre og slett knapper

--- a/src/index.less
+++ b/src/index.less
@@ -7,3 +7,4 @@
 @import './Stegside/MaalSteg/MaalSteg.less';
 @import './Stegside/MaalSteg/MaalKort/MaalKort.less';
 @import 'Stegside/MaalSteg/RedigerMaal/RedigerMaal.less';
+@import 'Stegside/MaalSteg/MaalKort/LagretMaal/KnappMedIkon/KnappMedIkon.less';
