--- a/src/Stegside/MaalSteg/MaalKort/MaalKort.less
+++ b/src/Stegside/MaalSteg/MaalKort/MaalKort.less
@@ -15,16 +15,11 @@
     color: @navGra60;
   }
 
-  &__strek {
-    background-color: @navGra20;
-    width: 100%;
-    height: 1px;
-  }
-
   &__knapper-wrapper {
     display: flex;
     justify-content: flex-end;
-    margin-top: 1.5rem;
+    padding-top: 1.5rem;
+    border-top: 1px solid @navGra20;
   }
 
   &__endreknapp {
