TAG-98: Start å fikse styling

--- a/src/Stegside/KontaktInformasjonSteg/ArbeidsgiverinfoDel/ArbeidsgiverinfoDel.less
+++ b/src/Stegside/KontaktInformasjonSteg/ArbeidsgiverinfoDel/ArbeidsgiverinfoDel.less
@@ -1,8 +1,21 @@
 @import '~nav-frontend-core/less/_variabler';
 
+.arbeidsgiver-tittel {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+.bedriftinfo {
+  &__postwrapper {
+    &__poststed {
+      margin-bottom: 2rem;
+    }
+  }
+}
+
 @media (min-width: @screen-sm-min) {
   .arbeidsgiver-tittel {
-    margin-top: 4rem;
+    margin-top: 3rem;
     margin-bottom: 2rem;
   }
 
