--- a/src/Stegside/KontaktInformasjonSteg/VeilederinfoDel/VeilederinfoDel.less
+++ b/src/Stegside/KontaktInformasjonSteg/VeilederinfoDel/VeilederinfoDel.less
@@ -1,4 +1,10 @@
 @import '~nav-frontend-core/less/_variabler';
+.veilederinfo {
+  &__tittel {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+}
 
 @media (min-width: @screen-sm-min) {
   .veilederinfo {
