--- a/src/Stegside/MaalSteg/MaalKort/MaalKort.less
+++ b/src/Stegside/MaalSteg/MaalKort/MaalKort.less
@@ -18,11 +18,14 @@
   &__knapper-wrapper {
     display: flex;
     justify-content: flex-end;
-    padding-top: 1.5rem;
     border-top: 1px solid @navGra20;
+    // TODO: Ikke generaliser styling for Innholdsboks.
+    padding-top: 0.5rem;
+    margin-bottom: -1.5rem;
   }
 
   &__endreknapp {
     margin-right: 1rem;
   }
 }
+
