--- a/src/Stegside/KontaktInformasjonSteg/DeltakerinfoDel/DeltakerinfoDel.less
+++ b/src/Stegside/KontaktInformasjonSteg/DeltakerinfoDel/DeltakerinfoDel.less
@@ -1,5 +1,12 @@
 @import '~nav-frontend-core/less/_variabler';
 
+.deltakerinfo {
+  &__tittel {
+    margin-bottom: 1rem;
+  }
+}
+
+
 @media (min-width: @screen-sm-min) {
   .deltakerinfo {
     &__tittel {
