TAG-96: Fiks styling

--- a/src/index.less
+++ b/src/index.less
@@ -8,3 +8,5 @@
 @import './Stegside/MaalSteg/MaalKort/MaalKort.less';
 @import './Stegside/MaalSteg/RedigerMaal/RedigerMaal.less';
 @import './Stegside/MaalSteg/MaalKort/LagretMaal/KnappMedIkon/KnappMedIkon.less';
+@import './Stegside/ArbeidstidSteg/Ukevelger/Ukevelger.less';
+@import './Stegside/ArbeidstidSteg/StillingsprosentInput/StillingsprosentInput.less';
