TAG-106: Lag arbeidsoppgaversteg

--- a/src/index.less
+++ b/src/index.less
@@ -10,3 +10,11 @@
 @import './Stegside/ArbeidstidSteg/Ukevelger/Ukevelger.less';
 @import './Stegside/ArbeidstidSteg/StillingsprosentInput/StillingsprosentInput.less';
 @import './komponenter/KnappMedIkon/KnappMedIkon.less';
+@import './Stegside/ArbeidsoppgaverSteg/OpprettOppgave/OpprettOppgave.less';
+@import './Stegside/ArbeidsoppgaverSteg/OppgaveKort/OppgaveKort.less';
+@import './Stegside/ArbeidsoppgaverSteg/RedigerOppgave/RedigerOppgave.less';
+
+
+.tiltaksgjennomforing {
+  height: 100vh;
+}
