TAG-109: Legg til innhold i godkjenning uten styling

--- a/src/index.less
+++ b/src/index.less
@@ -13,6 +13,7 @@
 @import './Stegside/ArbeidsoppgaverSteg/OpprettOppgave/OpprettOppgave.less';
 @import './Stegside/ArbeidsoppgaverSteg/OppgaveKort/OppgaveKort.less';
 @import './Stegside/ArbeidsoppgaverSteg/RedigerOppgave/RedigerOppgave.less';
+@import './Stegside/GodkjenningSteg/Stegoppsummering/Stegoppsummering.less';
 
 
 .tiltaksgjennomforing {
