--- a/src/Stegside/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less
+++ b/src/Stegside/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less
@@ -1,4 +1,4 @@
-@import '~nav-frontend-core/less/_variabler';
+@import '../../../../../node_modules/nav-frontend-core/less/_variabler';
 
 .stegoppsummering {
   &__tittel {
