--- a/src/index.less
+++ b/src/index.less
@@ -13,7 +13,8 @@
 @import './Stegside/ArbeidsoppgaverSteg/OpprettOppgave/OpprettOppgave.less';
 @import './Stegside/ArbeidsoppgaverSteg/OppgaveKort/OppgaveKort.less';
 @import './Stegside/ArbeidsoppgaverSteg/RedigerOppgave/RedigerOppgave.less';
-@import 'Stegside/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less';
+@import './Stegside/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less';
+@import './Stegside/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less';
 
 
 .tiltaksgjennomforing {
