TAG-109: Fiks styling på oppsummering

--- a/src/index.less
+++ b/src/index.less
@@ -15,6 +15,7 @@
 @import './Stegside/ArbeidsoppgaverSteg/RedigerOppgave/RedigerOppgave.less';
 @import './Stegside/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less';
 @import './Stegside/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less';
+@import './Stegside/GodkjenningSteg/Oppsummering/Oppsummering.less';
 
 
 .tiltaksgjennomforing {
