TAG-98: Fiks padding på mål- og oppgavekort

--- a/src/Stegside/ArbeidsoppgaverSteg/OppgaveKort/OppgaveKort.less
+++ b/src/Stegside/ArbeidsoppgaverSteg/OppgaveKort/OppgaveKort.less
@@ -1,6 +1,8 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .oppgavekort {
+  padding-bottom: 0.5rem;
+
   &__tittel {
     margin-bottom: 1rem;
   }
@@ -24,7 +26,7 @@
   &__knapper-wrapper {
     display: flex;
     justify-content: flex-end;
-    padding-top: 1.5rem;
+    padding-top: 0.5rem;
     border-top: 1px solid @navGra20;
   }
 
