--- a/src/Stegside/MaalSteg/MaalKort/MaalKort.less
+++ b/src/Stegside/MaalSteg/MaalKort/MaalKort.less
@@ -1,6 +1,8 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .maalkort {
+  padding-bottom: 0.5rem;
+
   &__tittel {
     margin-bottom: 1rem;
   }
@@ -19,13 +21,10 @@
     display: flex;
     justify-content: flex-end;
     border-top: 1px solid @navGra20;
-    // TODO: Ikke generaliser styling for Innholdsboks.
     padding-top: 0.5rem;
-    margin-bottom: -1.5rem;
   }
 
   &__endreknapp {
     margin-right: 1rem;
   }
 }
-
