TAG-115: Nye inputfelter for deltakerFnr, arbeidsgiverFnr og veilederNavIdent.

--- a/src/Stegside/KontaktInformasjonSteg/ArbeidsgiverinfoDel/ArbeidsgiverinfoDel.less
+++ b/src/Stegside/KontaktInformasjonSteg/ArbeidsgiverinfoDel/ArbeidsgiverinfoDel.less
@@ -50,6 +50,11 @@
     display: flex;
     flex-direction: row;
 
+    &__fnr {
+      width: 50%;
+      margin-right: 0.5rem;
+    }
+
     &__fornavn {
       width: 50%;
       margin-right: 0.5rem;
