--- a/src/Stegside/KontaktInformasjonSteg/VeilederinfoDel/VeilederinfoDel.less
+++ b/src/Stegside/KontaktInformasjonSteg/VeilederinfoDel/VeilederinfoDel.less
@@ -19,6 +19,11 @@
       flex-direction: row;
     }
 
+    &__navident {
+      width: 50%;
+      margin-right: 0.5rem;
+    }
+
     &__fornavn {
       width: 50%;
       margin-right: 0.5rem;
