--- a/src/Stegside/KontaktInformasjonSteg/DeltakerinfoDel/DeltakerinfoDel.less
+++ b/src/Stegside/KontaktInformasjonSteg/DeltakerinfoDel/DeltakerinfoDel.less
@@ -13,6 +13,11 @@
       margin-bottom: 2rem;
     }
 
+    &__fnr {
+      width: 50%;
+      padding-right: 0.5rem;
+    }
+
     &__deltakernavn {
       display: flex;
       flex-direction: row;
