--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -1,6 +1,6 @@
 @import '~nav-frontend-core/less/_variabler';
 
-.stegside {
+.avtaleside {
   background-color: @grayBackground;
   min-height: 100%;
   padding: 1rem 1rem 4rem;
@@ -16,7 +16,7 @@
 }
 
 @media (min-width: @screen-sm-min) {
-  .stegside {
+  .avtaleside {
     display: flex;
     flex-direction: row;
     justify-content: center;
