TAG-68: Ta tilbake bakgrunnsfargen på AvtaleSide

--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -2,6 +2,7 @@
 
 .avtaleside {
   min-height: 100%;
+  background-color: @grayBackground;
   padding: 1rem 1rem 4rem;
 
   &__ekspanderbart-panel {
