--- a/src/index.less
+++ b/src/index.less
@@ -16,6 +16,7 @@
 @import 'AvtaleSide/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less';
 @import 'AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less';
 @import 'AvtaleSide/GodkjenningSteg/Oppsummering/Oppsummering.less';
+@import 'komponenter/LaasbartInput/ReadOnlyFelt/ReadOnlyFelt.less';
 
 
 .tiltaksgjennomforing {
