TAG-201 Legg til grovdesignet kvitteringsside for avtaleoppretting

--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,5 @@
+@import '~nav-frontend-lenker-style';
+
 // Importerer spesifikke less filer som inneholder CSS regler som har lavere prioritet enn NAVs frontendbibliotek.
 // Gjør man ikke dette vil våres egne CSS regler bli overskrevet av NAVs frontendbibliotek.
 // Trenger ikke importere less filer som ikke blir overskrevet.
