--- a/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
+++ b/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
@@ -1,11 +1,11 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .opprettelseFullfort {
-  max-width: 37.5rem;
-  margin: 0 auto;
+  margin: 0 1.25rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 37.5rem;
 
   &__innholdstittel {
     margin: 1rem 0 2rem 0;
@@ -14,11 +14,6 @@
   &__undertittel {
     margin-top: 2rem;
     margin-bottom: 1rem;
-  }
-
-  &__kopierLenke-wrapper {
-    display: flex;
-    justify-content: space-between;
   }
 
   &__knapp {
@@ -37,12 +32,40 @@
     }
   }
 
+  &__inputfelt {
+    width: 100%;
+  }
+
+  &__lenkedeling {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .nav-veilederpanel {
     margin-bottom: 1rem;
     border-color: @navBlaLighten60;
 
     .nav-veileder__frame img, .nav-veileder__frame svg {
       height: 100%;
+    }
+  }
+}
+
+@media (min-width: @screen-sm-min) {
+  .opprettelseFullfort {
+    margin: 0 auto;
+    display: flex;
+
+    &__inputfelt {
+      margin-bottom: 0;
+        margin-right: 1rem;
+    }
+
+    &__lenkedeling {
+      flex-direction: row;
+      align-items: flex-end;
+      justify-content: space-between;
     }
   }
 }
