--- a/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
+++ b/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
@@ -7,6 +7,11 @@
   align-items: center;
   max-width: 37.5rem;
 
+  .eivind {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
   &__innholdstittel {
     margin: 1rem 0 2rem 0;
   }
@@ -24,11 +29,12 @@
   &__sidetittel {
     &-wrapper {
       display: flex;
+      flex-direction: column;
       margin: 2rem 0;
     }
 
     &-ikon {
-      margin-right: 1rem;
+      margin-bottom: 1rem;
     }
   }
 
@@ -43,6 +49,9 @@
   }
 
   .nav-veilederpanel {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-bottom: 2.5rem;
     margin-bottom: 1rem;
     border-color: @navBlaLighten60;
 
@@ -57,6 +66,17 @@
     margin: 0 auto;
     display: flex;
 
+    &__sidetittel {
+      &-wrapper {
+        flex-direction: row;
+      }
+
+      &-ikon {
+        margin-right: 1rem;
+        margin-bottom: 0;
+      }
+    }
+
     &__inputfelt {
       margin-bottom: 0;
         margin-right: 1rem;
@@ -66,6 +86,11 @@
       flex-direction: row;
       align-items: flex-end;
       justify-content: space-between;
+    }
+
+    .nav-veilederpanel {
+      padding-left: 2rem;
+      padding-right: 2rem;
     }
   }
 }
