TAG-201 Fiks margin på mobil og trekk ut url til konstant

--- a/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
+++ b/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
@@ -1,16 +1,12 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .opprettelseFullfort {
-  margin: 0 1.25rem;
+  padding: 0 1.25rem;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   max-width: 37.5rem;
-
-  .eivind {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
 
   &__innholdstittel {
     margin: 1rem 0 2rem 0;
