--- a/src/AvtaleSide/GodkjenningSteg/GodkjenningStatus/GodkjenningStatus.less
+++ b/src/AvtaleSide/GodkjenningSteg/GodkjenningStatus/GodkjenningStatus.less
@@ -1,11 +1,19 @@
-.godkjenningstatus {
-    border: 2px solid #9ac2e8;
+@import '~nav-frontend-core/less/_variabler';
 
-    &__tittel {
+.godkjenningstatus {
+    border: 2px solid @navBlaLighten60;
+
+    &__rader {
         margin-bottom: 1.5rem;
         margin-top: 1.5rem;
-    }
-    &__sisteRad {
-        margin-top: 1.5rem;
+
+        > div:not(:last-child) {
+            padding-top: 1.5rem;
+            padding-bottom: 1.5rem;
+            border-bottom: 1px solid #e7e9e9;
+        }
+        > div:last-child {
+            padding-top: 1.5rem;
+        }
     }
 }
