TAG-186: Varsel over lagreknapp, eller på topp av siden. Omskrivning til async/await.

--- a/src/komponenter/Varsel/Varsel.less
+++ b/src/komponenter/Varsel/Varsel.less
@@ -1,4 +1,9 @@
 .varsel {
-  position: fixed;
-  width: 100%;
+    position: relative;
+
+    &__lukknapp {
+      position: absolute;
+      top: 12px;
+      right: 12px;
+    }
 }
