Endret fra px til rem

--- a/src/komponenter/Varsel/Varsel.less
+++ b/src/komponenter/Varsel/Varsel.less
@@ -2,8 +2,8 @@
     position: relative;
 
     &__lukknapp {
-      position: absolute;
-      top: 12px;
-      right: 12px;
+        position: absolute;
+        top: 0.75rem;
+        right: 0.75rem;
     }
 }
