TAG-185: refaktorert banner-css med bla flexbo

--- a/src/komponenter/Innholdsboks/Innholdsboks.less
+++ b/src/komponenter/Innholdsboks/Innholdsboks.less
@@ -21,9 +21,7 @@
 }
 
 @media (min-width: @screen-sm-min) {
-    .innholdsboks {
-        &__innhold {
-            padding: 2rem;
-        }
+    .innholdsboks__innhold {
+        padding: 2rem;
     }
 }
