--- a/src/komponenter/Innholdsboks/UfyllerBanner/UtfyllerBanner.less
+++ b/src/komponenter/Innholdsboks/UfyllerBanner/UtfyllerBanner.less
@@ -1,22 +1,20 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .utfyllerBanner {
+    display: flex;
+    align-items: center;
+    height: 2.5rem;
+
     &__arbeidsgiver {
         background-color: @navBlaLighten80;
-        height: 2.5rem;
     }
     &__veileder {
         background-color: @navLillaLighten60;
-        height: 2.5rem;
     }
     &__fyllesUtAvTekst {
-        display: inline;
         padding-left: 1rem;
-        position: absolute;
-        padding-top: 0.5rem;
     }
     &__utfyllingsIkon {
-        padding-top: 0.5rem;
         padding-left: 2rem;
     }
 }
