Ryddet opp i ubrukt css

--- a/src/AvtaleSide/OppfolgingSteg/OppfolgingSteg.less
+++ b/src/AvtaleSide/OppfolgingSteg/OppfolgingSteg.less
@@ -6,37 +6,11 @@
       // hjelpetekst ikon
       top: 0.25rem;
   }
-
-  &__undertittel-wrapper {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-bottom: 1rem;
-    margin-top: 2rem;
-  }
-
-  &__oppfolging-undertittel {
-    margin-bottom: 0.3rem;
-  }
-
-  &__tilrettelegging-undertittel {
-    margin-bottom: 0.3rem;
-  }
-
-  &__hjelpetekst {
-    top: 0.25rem;
-  }
 }
 
 @media (min-width: @screen-sm-min) {
-  .oppfolgingsteg {
-    &__tittel {
+  .oppfolgingsteg__tittel {
       display: block;
       margin-bottom: 3rem;
-    }
-
-    &__undertittel-wrapper {
-      margin-top: 3rem;
-    }
   }
 }
