--- a/src/AvtaleSide/TilretteleggingSteg/TilretteleggingSteg.less
+++ b/src/AvtaleSide/TilretteleggingSteg/TilretteleggingSteg.less
@@ -9,14 +9,8 @@
 }
 
 @media (min-width: @screen-sm-min) {
-  .tilretteleggingsteg {
-    &__tittel {
+  .tilretteleggingsteg__tittel {
       display: block;
       margin-bottom: 3rem;
-    }
-
-    &__undertittel-wrapper {
-      margin-top: 3rem;
-    }
   }
 }
