--- a/src/AvtaleSide/KontaktInformasjonSteg/VeilederinfoDel/VeilederinfoDel.less
+++ b/src/AvtaleSide/KontaktInformasjonSteg/VeilederinfoDel/VeilederinfoDel.less
@@ -19,29 +19,18 @@
       flex-direction: row;
     }
 
-    &__navident {
-      width: 50%;
-      margin-right: 0.5rem;
-    }
-
     &__fornavn {
       width: 50%;
-      margin-right: 0.5rem;
+      padding-right: 1rem;
     }
 
     &__etternavn {
       width: 50%;
-      margin-left: 0.5rem;
-    }
-
-    &__epost {
-      width: 50%;
-      margin-right: 0.5rem;
     }
 
     &__tlf {
       width: 50%;
-      margin-left: 0.5rem;
+      padding-right: 1rem;
     }
   }
 }
