--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -21,6 +21,7 @@
     flex-direction: row;
     justify-content: center;
     padding-top: 4rem;
+    align-items: flex-start;
 
     &__innhold-desktop {
       width: 40rem;
