TAG-292: Setter bakgrunnfarge på hele body som fiks for IE.

--- a/src/index.less
+++ b/src/index.less
@@ -19,7 +19,6 @@
 @import 'AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less';
 @import 'AvtaleSide/GodkjenningSteg/Oppsummering/Oppsummering.less';
 
-.tiltaksgjennomforing {
-    height: 100vh;
+body {
     background-color: @grayBackground;
 }
