--- a/src/AvtaleSide/GodkjenningSteg/GodkjenningKnapper/Godkjenning.less
+++ b/src/AvtaleSide/GodkjenningSteg/GodkjenningKnapper/Godkjenning.less
@@ -1,5 +1,19 @@
-.godkjenningknapper {
+.godkjenning {
+  .innholdsboks__innhold {
+    display: flex;
+    flex-direction: column;
+  }
+
   &__tittel {
     margin-bottom: 1.5rem;
+  }
+
+  .veilederpanel-med-ikon {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+  }
+
+  .bekreftCheckboksPanel {
+    margin-bottom: 1rem;
   }
 }
