TAG-280: Unngår nøstet <p>.

--- a/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
+++ b/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
@@ -54,6 +54,10 @@
     .nav-veileder__frame img, .nav-veileder__frame svg {
       height: 100%;
     }
+
+    p {
+      margin-top: 1rem;
+    }
   }
 
   .lenke {
