TAG-188: AvtaleOversikt som landingside/forside.

--- a/src/InnloggingBoundary/Innloggingslinje.less
+++ b/src/InnloggingBoundary/Innloggingslinje.less
@@ -1,16 +1,19 @@
 @import '../../node_modules/nav-frontend-core/less/_variabler';
 
 .innloggingslinje {
-    &__boks {
-        background-color: @navMorkGra;
-        color: white;
-        padding: 0.5rem;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+    background-color: @navMorkGra;
+    color: white;
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-        &__loggutknapp {
-            background-color: @navLysGra;
-        }
+    &__identifikator {
+        color: white;
+        text-decoration: none;
+    }
+
+    &__loggutknapp {
+        background-color: @navLysGra;
     }
 }
