--- a/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
+++ b/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
@@ -1,7 +1,6 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .opprettelseFullfort {
-  background-color: @grayBackground;
   padding: 2rem 1rem;
   display: flex;
   flex-direction: column;
@@ -62,6 +61,10 @@
 
   .lenke {
     align-self: center;
+  }
+
+  p {
+    margin-top: 1rem;
   }
 }
 
