--- a/src/index.less
+++ b/src/index.less
@@ -18,6 +18,7 @@
 @import 'AvtaleSide/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less';
 @import 'AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less';
 @import 'AvtaleSide/GodkjenningSteg/Oppsummering/Oppsummering.less';
+@import 'AvtaleSide/AvtaleOversikt.less';
 
 body {
     background-color: @grayBackground;
