--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less
@@ -1,11 +1,19 @@
 @import '../../../../../node_modules/nav-frontend-core/less/_variabler';
 
 .stegoppsummering {
-  margin-bottom: 2rem;
+    margin-bottom: 2.5rem;
 
-  &__tittel {
-    border-bottom: 1px solid @navGra20;
-    padding-bottom: 0.1rem;
-    margin-bottom: 0.5rem;
-  }
+    &__header {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        border-bottom: 1px solid @navGra20;
+        margin-bottom: 0.5rem;
+        padding-bottom: 0.5rem;
+    }
+
+    &__tittel {
+        padding-left: 0.5rem;
+        width: 100%;
+    }
 }
