--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -1,35 +1,35 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .avtaleside {
-  min-height: 100%;
-  background-color: @grayBackground;
-  padding: 1rem 1rem 4rem;
+    min-height: 100%;
+    background-color: @grayBackground;
+    padding: 1rem 1rem 4rem;
 
-  &__ekspanderbart-panel {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-  }
-
-  &__lagre-knapp {
-    margin: 1rem;
-  }
-}
-
-@media (min-width: @screen-sm-min) {
-  .avtaleside {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding-top: 4rem;
-    align-items: flex-start;
-
-    &__innhold-desktop {
-      width: 40rem;
-      margin-left: 1rem;
+    &__ekspanderbart-panel {
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
     }
 
     &__lagre-knapp {
-      margin: 2rem;
+        margin: 1rem;
     }
-  }
+}
+
+@media (min-width: @screen-sm-min) {
+    .avtaleside {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding-top: 4rem;
+        align-items: flex-start;
+
+        &__innhold {
+            width: 40rem;
+            margin-left: 1rem;
+        }
+
+        &__lagre-knapp {
+            margin: 2rem;
+        }
+    }
 }
