Flyttet lagre knapp og div visuelle endringer

--- a/src/AvtaleSide/OppfolgingSteg/OppfolgingSteg.less
+++ b/src/AvtaleSide/OppfolgingSteg/OppfolgingSteg.less
@@ -1,10 +1,15 @@
 @import '~nav-frontend-core/less/_variabler';
 
-.oppfolgingsteg__tittel {
+.oppfolgingsteg {
+  &__tittel {
     display: none;
     :first-child {
       // hjelpetekst ikon
       top: 0.25rem;
+    }
+  }
+  &__lagre-knapp {
+    margin-top: 1rem;
   }
 }
 
