--- a/src/OpprettAvtale/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtale.less
@@ -28,6 +28,9 @@
     margin-top: 1rem;
     align-self: center;
   }
+  &__arbeidsgiver-bedriftNavn {
+    font-weight: 600;
+  }
 }
 
 @media (min-width: @screen-sm-min) {
