--- a/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
+++ b/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
@@ -94,6 +94,9 @@
       align-items: flex-end;
       justify-content: space-between;
     }
+    &__tekst {
+      margin-right: 13rem;
+    }
 
     .nav-veilederpanel {
       padding-left: 2rem;
