Justert stegmeny til å flukte med avtale side

--- a/src/AvtaleSide/Stegmeny/StegmenyLenke/StegmenyLenke.less
+++ b/src/AvtaleSide/Stegmeny/StegmenyLenke/StegmenyLenke.less
@@ -6,7 +6,7 @@
   align-items: center;
   height: 4rem;
   width: 18rem;
-  margin: 0.25rem;
+  margin-bottom: 0.5rem;
   padding-left: 1rem;
   border-radius: 4px;
   background-color: white;
