lagrer endringer for oppgave oppsummering

--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
@@ -2,15 +2,18 @@
 
 .avtaleparter {
     &__content {
-    padding-top: 0.5rem;
-      padding-bottom: 0.5rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.25rem;
+        padding-left: 1rem;
     }
 
     &__radtittel {
         padding-top: 2rem;
+        padding-bottom: 0.5rem;
 
         &--first {
             padding-top: 0.5rem;
+            padding-bottom: 0.5rem;
         }
     }
 
@@ -26,6 +29,13 @@
             justify-content: left;
             flex-grow: 1;
         }
+    }
+
+    &__boxwrapper {
+        margin-top: 0.25rem;
+        -webkit-box-shadow: 1px 1px 3px 0px rgba(205, 205, 205, 0.75);
+        -moz-box-shadow: 1px 1px 3px 0px rgba(205, 205, 205, 0.75);
+        box-shadow: 1px 1px 3px 0px rgba(205, 205, 205, 0.75);
     }
 
     &__element {
