--- a/src/komponenter/EkspanderbartPanelRad/EksbanderbartPanelRad.less
+++ b/src/komponenter/EkspanderbartPanelRad/EksbanderbartPanelRad.less
@@ -1,12 +1,17 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .howto {
+  & svg {
+    width: 100%;
+  }
+
     &__element {
       display: flex;
       margin-bottom: 1.5rem;
       margin-left: 0.5rem;
       margin-right: 0.5rem;
       margin-top: 1rem;
+      align-items: flex-start;
     }
     &__tekst {
       margin-left: 1rem;
