--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppgaveOppsummering/oppgaveOppsummering.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppgaveOppsummering/oppgaveOppsummering.less
@@ -9,6 +9,10 @@
         margin-bottom: 0.5rem;
     }
 
+    &__label {
+        padding-bottom: 0.25rem;
+    }
+
     &__beskrivelse {
         margin-bottom: 1rem;
         font-style: italic;
