--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
@@ -4,16 +4,13 @@
     &__content {
         padding-top: 0.5rem;
         padding-bottom: 0.25rem;
-        padding-left: 1rem;
     }
 
     &__radtittel {
-        padding-top: 2rem;
-        padding-bottom: 0.5rem;
+        padding-top: 1rem;
 
         &--first {
             padding-top: 0.5rem;
-            padding-bottom: 0.5rem;
         }
     }
 
@@ -31,13 +28,6 @@
         }
     }
 
-    &__boxwrapper {
-        margin-top: 0.25rem;
-        -webkit-box-shadow: 1px 1px 3px 0px rgba(205, 205, 205, 0.75);
-        -moz-box-shadow: 1px 1px 3px 0px rgba(205, 205, 205, 0.75);
-        box-shadow: 1px 1px 3px 0px rgba(205, 205, 205, 0.75);
-    }
-
     &__element {
         width: 100%;
     }
@@ -48,11 +38,10 @@
 
     &__navn {
         margin-bottom: 1rem;
-        font-style: italic;
 
         &--ikkeFyltUt {
             background-color: #ffe5c2;
-            width: 37%;
+            width: fit-content;
             padding-left: 1rem;
             padding-right: 1rem;
             border-radius: 4px;
