Endret css til å bruke Element klassen istedenfor font-weigth

--- a/src/OpprettAvtale/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtale.less
@@ -29,7 +29,7 @@
     align-self: center;
   }
   &__arbeidsgiver-bedriftNavn {
-    font-weight: 600;
+    margin-bottom: 1rem;
   }
 }
 
@@ -63,7 +63,7 @@
 
     &__arbeidsgiver-bedriftNavn {
       width: 50% - 1rem;
-      font-weight: 600;
+      margin-bottom: 1rem;
     }
 
     &__knapp {
