--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
@@ -3,14 +3,15 @@
 .avtaleparter {
     &__content {
         padding-top: 0.5rem;
-        padding-bottom: 0.25rem;
     }
 
     &__radtittel {
-        padding-top: 1rem;
+        padding-top: 2rem;
+        padding-left: 0.5rem;
 
         &--first {
-            padding-top: 0.5rem;
+            padding-top: 1rem;
+            padding-left: 0.5rem
         }
     }
 
@@ -19,6 +20,7 @@
         flex-direction: column;
         justify-content: left;
         flex-grow: 1;
+        padding-left: 0.5rem;
 
         &--fortsettelse {
             display: flex;
@@ -30,6 +32,11 @@
 
     &__element {
         width: 100%;
+        padding-bottom: 0.75rem;
+
+        &--ytterraad {
+            padding-left: 5rem;
+        }
     }
 
     &__label {
@@ -37,7 +44,7 @@
     }
 
     &__navn {
-        margin-bottom: 1rem;
+        margin-bottom: 0.5rem;
 
         &--ikkeFyltUt {
             background-color: #ffe5c2;
@@ -53,11 +60,34 @@
         &__rad {
             flex-direction: row;
             justify-content: space-between;
+            padding-left: 0;
 
             &--fortsettelse {
                 flex-direction: row;
                 justify-content: space-between;
             }
+        }
+
+        &__radtittel {
+            padding-top: 1rem;
+            padding-left: 0;
+
+            &--first {
+                padding-top: 0.5rem;
+                padding-left: 0;
+            }
+        }
+
+        &__content {
+            padding-bottom: 0.25rem;
+        }
+
+        &__navn {
+            margin-bottom: 1rem;
+        }
+
+        &__element {
+            padding-bottom: 0.25rem;
         }
     }
 }
