--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/målOppsummering/målOppsummering.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/målOppsummering/målOppsummering.less
@@ -6,8 +6,10 @@
 
     &__ikkeSatt {
         background-color: #ffe5c2;
-        width: 20%;
-        padding: 0.1rem 0.5rem;
+        width: fit-content;
+        padding-left: 1rem;
+        padding-right: 1rem;
         border-radius: 4px;
+        text-align: center;
     }
 }
