endret litt på styling

--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
@@ -40,7 +40,9 @@
     }
 
     &__label {
-        padding-bottom: 0.1rem;
+
+        margin-bottom: 0.1rem;
+
     }
 
     &__navn {
@@ -69,7 +71,7 @@
         }
 
         &__radtittel {
-            padding-top: 1rem;
+            padding-top: 2.5rem;
             padding-left: 0;
 
             &--first {
