css endring fikset

--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -24,6 +24,10 @@
     }
 
     &__lenker {
+        margin: 0 0.25rem;
+    }
+
+    &__lenker {
         &__header {
             display: flex;
             justify-content: flex-start;
@@ -52,15 +56,8 @@
             width: 7rem;
         }
     }
-}
-
-@media (min-width: @screen-sm-min) {
-    .avtaleoversikt {
+    @media (min-width: @screen-sm-min) {
         margin: 0 auto;
         max-width: @screen-sm-min;
-    }
-
-    .lenkepanel {
-        margin: 0 0.25rem;
     }
 }
