issue => TAG-398: lagt til bekreftelsesModal for sletting av maal- og oppgave-rad

--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
@@ -11,7 +11,7 @@
 
         &--first {
             padding-top: 1rem;
-            padding-left: 0.5rem
+            padding-left: 0.5rem;
         }
     }
 
