tag-401 valgt maal ligger nå øverst i listen ved valg av redigere maal

--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
@@ -11,7 +11,7 @@
 
         &--first {
             padding-top: 1rem;
-            padding-left: 0.5rem
+            padding-left: 0.5rem;
         }
     }
 
@@ -40,9 +40,7 @@
     }
 
     &__label {
-
         margin-bottom: 0.1rem;
-
     }
 
     &__navn {
