endret design på modal ut ifra zeplin skisse

--- a/src/komponenter/modal/bekreftelseModal.less
+++ b/src/komponenter/modal/bekreftelseModal.less
@@ -24,7 +24,16 @@
         }
 
         &__innhold {
-            margin: 1.5rem 0;
+            margin: 1.5rem 0 2rem 0;
+        }
+
+        &__tittel {
+            text-align: center;
+            padding-bottom: 1rem;
+        }
+
+        &__varselTekst {
+            text-align: center;
         }
 
         &__lenkeknapp {
@@ -51,7 +60,7 @@
         &__knappRad {
             display: flex;
             justify-content: flex-end;
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem;
         }
 
         &__topIconContainer {
@@ -83,7 +92,7 @@
             &__knapper {
                 display: flex;
                 flex-direction: row;
-                justify-content: space-between;
+                justify-content: center;
 
                 .knapp:not(:last-child) {
                     margin-bottom: 0rem;
