--- a/src/OpprettAvtale/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtale.less
@@ -32,9 +32,15 @@
         margin-bottom: 1rem;
     }
 
+    &__knappRad {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     &__avbryt {
-        text-align: center;
-        padding: 1rem 0;
+        margin: 1rem 0;
+        width: 30%;
     }
 }
 
